# simulation_project

./: CMakeLists.txt  README.md  model_1499.pt  mvp_production.md  package.xml  readme.md  train.py  찐최종_로보틱스 심화캠프1기_프로젝트발표(3조).pptx - Google Slides.html
config/: ai_params.yaml (수정)
envs/: task.py
launch/: rl_system_launch.py  start_robot_llm.launch.py
scripts/: bev_vision_node.py  dqn_control_node.py  pose_estimation_node.py  task_orchestrator_node.py (API 엔트리포인트 노드)
src/: camera_driver_node.py  main_control_node.cpp  robot_arm_interface_node.py  student_policy_inference_node.py  tensorrt_inference_node.cpp
