<package format="3">
  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <depend>CUDA</depend>
  <depend>TensorRT</depend>
  <depend>OpenCV</depend> 

</package>
